--- a/src/style.css
+++ b/src/style.css
@@ -109,24 +109,6 @@ button {
   display: flex;
 }
 
-.logo {
-  /* display: inline-block; */
-  width: auto;
-  height: 30px;
-  /* margin-bottom: 10px; */
-
-  margin-left: auto;
-  padding-right: 10px;
-  /* margin-bottom: 15px; */
-  /* margin: 0 auto -20px 10px; */
-
-  /* background-color: white; */
-}
-/* .logo-divider {
-  width: 100%;
-  height: 5px;
-  border-bottom: 1px solid black;
-} */
 .dateRangePicker {
   display: inline-block;
   width: 300px;
@@ -227,3 +209,42 @@ button {
 }
 /* (moved to top for correct import order) */
 @import '~@syncfusion/ej2-vue-grids/styles/material-lite.css';
+.top-line {
+  display: flex;
+  width: 50%;
+  /* background-color: white; */
+  /* flex-direction: row; */
+  /* justify-content: space-between; */
+  gap: 0;
+  align-items: center;
+}
+
+.select-date {
+  /* gap: 0.5rem; */
+  background-color: white;
+  height: 25px;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  /* padding: 5px; */
+}
+.logo {
+  /* display: inline-block; */
+  width: auto;
+  height: 22px;
+  /* margin-bottom: 10px; */
+
+  margin-left: auto;
+  padding-right: 10px;
+  /* margin-bottom: 15px; */
+  /* margin: 0 auto -20px 10px; */
+
+  /* background-color: white; */
+}
+
+.date-spacing {
+  width: 50px;
+  height: 30px;
+  background-color: white;
+  border-width: 300px;
+}
