--- a/src/style2.css
+++ b/src/style2.css
@@ -1,11 +1,31 @@
-.select-date {
+.date-cow {
   display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
+  width: 100%;
+  background-color: white;
+  /* flex-direction: row; */
+  /* justify-content: space-between; */
+  align-items: center;
+}
+
+.select-date {
+  /* gap: 0.5rem; */
   background-color: white;
   height: 30px;
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
-  padding: 5px;
+  /* padding: 5px; */
+}
+.logo {
+  /* display: inline-block; */
+  width: auto;
+  height: 25px;
+  /* margin-bottom: 10px; */
+
+  margin-left: auto;
+  padding-right: 10px;
+  /* margin-bottom: 15px; */
+  /* margin: 0 auto -20px 10px; */
+
+  /* background-color: white; */
 }
