--- a/src/style.css
+++ b/src/style.css
@@ -243,8 +243,18 @@ button {
 }
 
 .date-spacing {
-  width: 50px;
-  height: 30px;
+  width: 10px;
+  height: 40px;
   background-color: white;
   border-width: 300px;
+}
+
+.date-input {
+  display: inline-block; /* make width honor our rules */
+  background-color: white;
+  width: 150px;
+  /* height: 40px; */
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px; /* keep text readable */
 }
