--- a/src/style2.css
+++ b/src/style2.css
@@ -1,16 +1,24 @@
-.date-cow {
+.date-header {
   display: flex;
   width: 100%;
+  height: 40px;
   background-color: white;
   /* flex-direction: row; */
   /* justify-content: space-between; */
   align-items: center;
 }
 
+.date-input {
+  display: inline-block; /* make width honor our rules */
+  width: 50px !important ; /* shrink to content */
+  padding: 0.25rem 0.5rem; /* adjust inner space */
+  font-size: 1rem; /* keep text readable */
+}
+
 .select-date {
   /* gap: 0.5rem; */
   background-color: white;
-  height: 30px;
+  height: 40px;
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
