--- a/src/style.css
+++ b/src/style.css
@@ -209,10 +209,10 @@ button {
 }
 /* (moved to top for correct import order) */
 @import '~@syncfusion/ej2-vue-grids/styles/material-lite.css';
+
 .top-line {
   display: flex;
-  width: 40%;
-  /* background-color: white; */
+  width: 60%; /* background-color: white; */
   /* flex-direction: row; */
   /* justify-content: space-between; */
   gap: 0;
@@ -254,6 +254,8 @@ button {
   background-color: white;
   width: 220px;
   padding-left: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   /* height: 40px; */
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
